doc: Fix UI issues (contrast and font sizes)

--- a/doc/themes/the-things-stack/assets/css/pages/homepage.scss
+++ b/doc/themes/the-things-stack/assets/css/pages/homepage.scss
@@ -40,8 +40,8 @@
 }
 
 .container-whats-new {
-  background-color: var(--c-tts-primary-dark);
-  box-shadow: 0px 2.7px 5.3px rgba(0, 0, 0, 0.04), 0px 8.9px 17.9px rgba(0, 0, 0, 0.06), 0px 40px 80px rgba(0, 0, 0, 0.1);
+  background-color: var(--c-tts-primary-100);
+  box-shadow: 0px 2.7px 5.3px rgba(0, 0, 0, 0.01), 0px 8.9px 17.9px rgba(0, 0, 0, 0.015), 0px 40px 80px rgba(0, 0, 0, 0.025);
   background-image: url(/img/doc-pattern.png);
   background-repeat: no-repeat;
   background-size: 160%;
@@ -49,11 +49,13 @@
 }
 
 .item-whats-new {
-  background-color: #001141;
+  background-color: var(--c-tts-primary-main);
+  background: rgba(30, 93, 255, 0.05);
   transition: all .2s ease-in-out;
 }
 
 .item-whats-new:hover {
-  background-color: #000d32;
+  background-color: var(--c-tts-primary-main);
+  background: rgba(30, 93, 255, 0.10);
   transform: translateY(-2px);
 }
